Fix read more link focus overlap issue

--- a/src/static/less/page.less
+++ b/src/static/less/page.less
@@ -147,6 +147,7 @@ body {
 			}
 
 			&:before {
+				z-index: -1;
 				right:100%;
 				border-width:0 1em 1em 0;
 				border-color:transparent @white transparent transparent;
